[workspace]

members = [
    "solutions/2023/01",
    "solutions/2023/02",
    "solutions/2023/03",
    "solutions/2023/04",
    "solutions/2023/05",
    "solutions/2023/06",
    "solutions/2023/07",
    "solutions/2023/08",
    "solutions/2023/09",
    "solutions/2023/10",
    "solutions/2023/11",
    "solutions/2023/12",
    "solutions/2023/13",
    "solutions/2023/14",
    "solutions/2023/15",
    "solutions/2023/16",
    "solutions/2023/17",
    "solutions/2023/18",
    "solutions/2023/19",
    "solutions/2023/20",
    "solutions/2023/21",
    "solutions/2023/22",
    "solutions/2023/23",
    "solutions/2023/24",
]

resolver = "1"